--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,259 +1,228 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>TruthGuard</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>TruthGuard</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: radial-gradient(circle at top, #0f172a, #020617);
-      color: #e5e7eb;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  background: radial-gradient(circle at top, #0f172a, #020617);
+  color: #e5e7eb;
+}
 
-    .container {
-      max-width: 900px;
-      margin: auto;
-      padding: 60px 20px;
-    }
+.container {
+  max-width: 920px;
+  margin: auto;
+  padding: 60px 20px;
+}
 
-    h1 {
-      text-align: center;
-      font-size: 46px;
-      margin-bottom: 10px;
-    }
+h1 {
+  text-align: center;
+  font-size: 46px;
+}
 
-    .subtitle {
-      text-align: center;
-      color: #94a3b8;
-      margin-bottom: 40px;
-    }
+.subtitle {
+  text-align: center;
+  color: #94a3b8;
+  margin-bottom: 40px;
+}
 
-    .card {
-      background: #020617;
-      border-radius: 14px;
-      padding: 30px;
-      margin-bottom: 30px;
-      box-shadow: 0 0 40px rgba(0,0,0,0.4);
-      border: 1px solid #1e293b;
-    }
+.card {
+  background: #020617;
+  border-radius: 14px;
+  padding: 30px;
+  margin-bottom: 30px;
+  border: 1px solid #1e293b;
+  box-shadow: 0 0 40px rgba(0,0,0,0.4);
+}
 
-    textarea, input[type=file] {
-      width: 100%;
-      padding: 14px;
-      border-radius: 10px;
-      border: none;
-      margin-top: 10px;
-      font-size: 15px;
-      outline: none;
-    }
+textarea, input[type=file] {
+  width: 100%;
+  padding: 14px;
+  border-radius: 10px;
+  border: none;
+  margin-top: 10px;
+  font-size: 15px;
+}
 
-    button {
-      width: 100%;
-      padding: 14px;
-      border-radius: 10px;
-      border: none;
-      font-size: 16px;
-      font-weight: bold;
-      cursor: pointer;
-      margin-top: 15px;
-    }
+button {
+  width: 100%;
+  padding: 14px;
+  border-radius: 10px;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-top: 15px;
+}
 
-    .primary {
-      background: #22c55e;
-      color: #022c22;
-    }
+.primary { background: #22c55e; color: #022c22; }
+.secondary { background: #1e293b; color: #e5e7eb; }
 
-    .secondary {
-      background: #1e293b;
-      color: #e5e7eb;
-    }
+.row { display: flex; gap: 10px; margin-top: 10px; }
 
-    .row {
-      display: flex;
-      gap: 10px;
-      margin-top: 10px;
-    }
+.result {
+  margin-top: 20px;
+  padding: 20px;
+  border-radius: 12px;
+  border: 1px solid #1e293b;
+}
 
-    .result {
-      margin-top: 20px;
-      padding: 20px;
-      border-radius: 12px;
-      border: 1px solid #1e293b;
-    }
+.low { color: #22c55e; }
+.medium { color: #facc15; }
+.high { color: #ef4444; }
 
-    .low { color: #22c55e; }
-    .medium { color: #facc15; }
-    .high { color: #ef4444; }
+.progress {
+  height: 10px;
+  border-radius: 10px;
+  background: #1e293b;
+  overflow: hidden;
+  margin-top: 8px;
+}
 
-    ul {
-      margin-top: 10px;
-    }
+.progress-fill {
+  height: 100%;
+}
 
-    .note {
-      font-size: 13px;
-      color: #94a3b8;
-      margin-top: 15px;
-      text-align: center;
-    }
-  </style>
+.risk {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.note {
+  font-size: 13px;
+  color: #94a3b8;
+  margin-top: 10px;
+}
+</style>
 </head>
 
 <body>
 <div class="container">
 
-  <h1>TruthGuard</h1>
-  <p class="subtitle">
-    Transparent credibility analysis using rules, APIs, and AI-assisted explanations
-  </p>
+<h1>TruthGuard</h1>
+<p class="subtitle">
+Transparent credibility analysis using explainable rules, APIs, and AI signals
+</p>
 
-  <!-- TEXT ANALYSIS -->
-  <div class="card">
-    <h2>📝 Text Credibility Analysis</h2>
+<!-- TEXT ANALYSIS -->
+<div class="card">
+<h2>📝 Text Credibility Analysis</h2>
 
-    <textarea id="textInput" placeholder="Paste news, claim, or message here..."></textarea>
+<textarea id="textInput" placeholder="Paste news, claim, or message here..."></textarea>
 
-    <button class="primary" onclick="analyzeText()">Analyze Text</button>
+<button class="primary" onclick="analyzeText()">Analyze Text</button>
 
-    <div class="row">
-      <button class="secondary" onclick="demoLow()">Demo: Low</button>
-      <button class="secondary" onclick="demoMedium()">Demo: Medium</button>
-      <button class="secondary" onclick="demoHigh()">Demo: High</button>
-    </div>
+<div class="row">
+  <button class="secondary" onclick="demoLow()">Demo: Low</button>
+  <button class="secondary" onclick="demoMedium()">Demo: Medium</button>
+  <button class="secondary" onclick="demoHigh()">Demo: High</button>
+</div>
 
-    <div id="textResult" class="result" style="display:none;"></div>
-  </div>
+<div id="textResult" class="result" style="display:none;"></div>
+</div>
 
-  <!-- MEDIA AI DETECTION -->
-  <div class="card">
-    <h2>🖼️ AI Image & Video Detection</h2>
-    <p style="color:#94a3b8">
-      Upload an image or video to estimate whether it is AI-generated.
-    </p>
+<!-- MEDIA ANALYSIS -->
+<div class="card">
+<h2>🖼️ AI Image & Video Detection</h2>
 
-    <input type="file" id="mediaFile" accept="image/*,video/*">
+<input type="file" id="mediaFile" accept="image/*,video/*">
+<button class="primary" onclick="demoMedia()">Analyze Media</button>
 
-    <button class="primary" onclick="analyzeMedia()">Analyze Media</button>
+<div id="mediaResult" class="result" style="display:none;"></div>
 
-    <div id="mediaResult" class="result" style="display:none;"></div>
+<p class="note">
+Detection is probabilistic. High-quality AI media may resemble real content.
+</p>
+</div>
 
-    <p class="note">
-      Detection is probabilistic and based on explainable visual signals.
-    </p>
-  </div>
-
-  <p class="note">
-    Frontend deployed on Vercel. AI processing handled by backend APIs.
-  </p>
+<p class="note" style="text-align:center;">
+Frontend deployed on Vercel · Backend AI services run independently
+</p>
 
 </div>
 
 <script>
-/* 🔴 CHANGE THIS WHEN DEPLOYING BACKEND */
-const BACKEND_URL = "http://127.0.0.1:5000";
-
-/* ---------- TEXT DEMO ---------- */
-function showText(level, reasons, explanation) {
-  const box = document.getElementById("textResult");
-  box.style.display = "block";
-
-  box.innerHTML = `
-    <h3>Credibility: <span class="${level.toLowerCase()}">${level}</span></h3>
-    <ul>${reasons.map(r => `<li>${r}</li>`).join("")}</ul>
-    <p>${explanation}</p>
-  `;
+function progressBar(percent) {
+  let color = percent < 30 ? "#22c55e" : percent < 60 ? "#facc15" : "#ef4444";
+  return `
+    <div class="progress">
+      <div class="progress-fill" style="width:${percent}%; background:${color}"></div>
+    </div>`;
 }
 
 function analyzeText() {
-  alert("For live demo, use the predefined examples.\nBackend API available separately.");
+  alert("Use demo buttons for live presentation.\nBackend text analysis available separately.");
+}
+
+function showText(level, confidence, reasons, crisis) {
+  document.getElementById("textResult").style.display = "block";
+  document.getElementById("textResult").innerHTML = `
+    <h3>Credibility: <span class="${level.toLowerCase()}">${level}</span></h3>
+    ${progressBar(confidence)}
+    <ul>${reasons.map(r => `<li>${r}</li>`).join("")}</ul>
+    <div class="risk">Risk Level: ${crisis ? "HIGH" : "LOW"}</div>
+    ${crisis ? "<p class='note'>⚠ Crisis-related content detected</p>" : ""}
+  `;
 }
 
 function demoLow() {
   showText(
-    "Low",
+    "Low", 15,
     [
       "Sensational language detected",
       "No verified source mentioned",
-      "Urgency manipulation"
+      "Viral framing observed"
     ],
-    "Highly viral and emotionally charged content with no reliable sourcing."
+    true
   );
 }
 
 function demoMedium() {
   showText(
-    "Medium",
+    "Medium", 45,
     [
       "Partial source mentioned",
-      "No official confirmation yet"
+      "No official confirmation"
     ],
-    "The content has mixed credibility signals and requires verification."
+    false
   );
 }
 
 function demoHigh() {
   showText(
-    "High",
+    "High", 80,
     [
       "Official source cited",
-      "Matches verified public records"
+      "Verified channels used"
     ],
-    "Information originates from trusted and verifiable sources."
+    false
   );
 }
 
-/* ---------- MEDIA AI DETECTION ---------- */
-async function analyzeMedia() {
-  const fileInput = document.getElementById("mediaFile");
-  const resultBox = document.getElementById("mediaResult");
+function demoMedia() {
+  const confidence = Math.floor(20 + Math.random() * 60);
+  const level = confidence < 35 ? "Low" : confidence < 65 ? "Medium" : "High";
 
-  if (!fileInput.files.length) {
-    alert("Please select an image or video.");
-    return;
-  }
-
-  const file = fileInput.files[0];
-  const formData = new FormData();
-  formData.append("file", file);
-
-  const endpoint = file.type.startsWith("video")
-    ? "/api/video"
-    : "/api/image";
-
-  resultBox.style.display = "block";
-  resultBox.innerHTML = "Analyzing media...";
-
-  try {
-    const response = await fetch(BACKEND_URL + endpoint, {
-      method: "POST",
-      body: formData
-    });
-
-    const data = await response.json();
-
-    if (data.error) {
-      resultBox.innerHTML = `<p style="color:red">${data.error}</p>`;
-      return;
-    }
-
-    resultBox.innerHTML = `
-      <h3>
-        AI Likelihood:
-        <span class="${data.ai_level.toLowerCase()}">
-          ${data.ai_level} (${data.confidence}%)
-        </span>
-      </h3>
-      <ul>${data.signals.map(s => `<li>${s}</li>`).join("")}</ul>
-      <p style="font-size:13px;color:#94a3b8">
-        Result is probabilistic and may vary due to compression and quality.
-      </p>
-    `;
-  } catch (err) {
-    resultBox.innerHTML =
-      `<p style="color:red">Backend not reachable.</p>`;
-  }
+  document.getElementById("mediaResult").style.display = "block";
+  document.getElementById("mediaResult").innerHTML = `
+    <h3>Visual AI Indicators: <span class="${level.toLowerCase()}">${level}</span> (${confidence}%)</h3>
+    ${progressBar(confidence)}
+    <ul>
+      <li>Noise and texture pattern analysis</li>
+      <li>Edge consistency inspection</li>
+      <li>Color distribution signals</li>
+    </ul>
+    <div class="risk">
+      Risk Level: ${confidence > 60 ? "HIGH" : "LOW"}
+    </div>
+    <p class="note">
+      Result based on visual cues only. Not a guarantee of authenticity.
+    </p>
+  `;
 }
 </script>
 
