--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,324 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>TruthGuard</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <title>TruthGuard</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<style>
-:root {
-  --bg-dark: #020617;
-  --bg-card: rgba(15, 23, 42, 0.85);
-  --border: rgba(148, 163, 184, 0.15);
-  --green: #22c55e;
-  --yellow: #facc15;
-  --red: #ef4444;
-  --muted: #94a3b8;
-}
-
-* { box-sizing: border-box; }
-
-body {
-  margin: 0;
-  font-family: "Inter", system-ui, sans-serif;
-  background:
-    radial-gradient(circle at top, #0f172a, #020617);
-  color: #e5e7eb;
-  min-height: 100vh;
-}
-
-.container {
-  max-width: 1100px;
-  margin: auto;
-  padding: 60px 24px 80px;
-}
-
-/* ---------- HEADER ---------- */
-header {
-  text-align: center;
-  margin-bottom: 60px;
-}
-
-header h1 {
-  font-size: 56px;
-  font-weight: 800;
-  letter-spacing: -1px;
-}
-
-header p {
-  max-width: 700px;
-  margin: 12px auto 0;
-  color: var(--muted);
-  font-size: 17px;
-}
-
-/* ---------- GRID ---------- */
-.grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 40px;
-}
-
-@media (min-width: 900px) {
-  .grid {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-/* ---------- CARD ---------- */
-.card {
-  background: var(--bg-card);
-  backdrop-filter: blur(14px);
-  border-radius: 20px;
-  border: 1px solid var(--border);
-  padding: 32px;
-  box-shadow: 0 40px 80px rgba(0,0,0,0.4);
-}
-
-.card h2 {
-  margin: 0 0 8px;
-  font-size: 26px;
-}
-
-.card p.sub {
-  margin: 0 0 24px;
-  color: var(--muted);
-  font-size: 14px;
-}
-
-/* ---------- INPUT ---------- */
-textarea, input[type=file] {
-  width: 100%;
-  padding: 16px;
-  border-radius: 14px;
-  border: 1px solid var(--border);
-  background: rgba(2,6,23,0.8);
-  color: #e5e7eb;
-  font-size: 15px;
-}
-
-textarea {
-  resize: none;
-  height: 140px;
-}
-
-/* ---------- BUTTONS ---------- */
-button {
-  width: 100%;
-  padding: 14px;
-  border-radius: 14px;
-  border: none;
-  font-size: 15px;
-  font-weight: 600;
-  cursor: pointer;
-  transition: transform 0.15s ease, box-shadow 0.15s ease;
-}
-
-button:hover {
-  transform: translateY(-1px);
-  box-shadow: 0 10px 30px rgba(0,0,0,0.4);
-}
-
-.primary {
-  background: linear-gradient(135deg, #22c55e, #16a34a);
-  color: #022c22;
-}
-
-.secondary {
-  background: rgba(148,163,184,0.1);
-  color: #e5e7eb;
-}
-
-.row {
-  display: flex;
-  gap: 10px;
-  margin-top: 12px;
-}
-
-/* ---------- RESULT ---------- */
-.result {
-  margin-top: 28px;
-  padding: 24px;
-  border-radius: 16px;
-  border: 1px solid var(--border);
-  background: rgba(2,6,23,0.8);
-}
-
-.badge {
-  display: inline-block;
-  padding: 6px 14px;
-  border-radius: 999px;
-  font-weight: 700;
-  font-size: 14px;
-}
-
-.low { background: rgba(34,197,94,0.2); color: var(--green); }
-.medium { background: rgba(250,204,21,0.2); color: var(--yellow); }
-.high { background: rgba(239,68,68,0.2); color: var(--red); }
-
-/* ---------- PROGRESS ---------- */
-.progress {
-  height: 10px;
-  background: rgba(148,163,184,0.2);
-  border-radius: 999px;
-  overflow: hidden;
-  margin: 12px 0 18px;
-}
-
-.progress-fill {
-  height: 100%;
-  width: 0%;
-  transition: width 0.8s ease;
-}
-
-.green { background: var(--green); }
-.yellow { background: var(--yellow); }
-.red { background: var(--red); }
-
-/* ---------- LIST ---------- */
-ul {
-  padding-left: 18px;
-  margin: 12px 0;
-}
-
-li {
-  margin-bottom: 6px;
-}
-
-/* ---------- FOOTER ---------- */
-footer {
-  text-align: center;
-  margin-top: 60px;
-  color: var(--muted);
-  font-size: 13px;
-}
-</style>
+  <!-- KEEP YOUR EXISTING CSS -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
-<div class="container">
 
-<header>
-  <h1>TruthGuard</h1>
-  <p>
-    A transparent credibility verification system for text, images, and videos —
-    designed to reduce misinformation and prevent panic.
+  <h1 class="title">TruthGuard</h1>
+  <p class="subtitle">
+    A transparent credibility verification system for text, images, and videos — designed to reduce misinformation and prevent panic.
   </p>
-</header>
 
-<div class="grid">
+  <div class="container">
 
-  <!-- TEXT CARD -->
-  <div class="card">
-    <h2>📝 Text Credibility</h2>
-    <p class="sub">Rule-based analysis with explainable signals</p>
+    <!-- TEXT CARD -->
+    <div class="card">
+      <h2>📄 Text Credibility</h2>
+      <p class="muted">Rule-based analysis with explainable signals</p>
 
-    <textarea id="textInput"
-      placeholder="Paste news, claims, or social media content here..."></textarea>
+      <textarea placeholder="Paste news, claims, or social media content here..."></textarea>
 
-    <button class="primary" onclick="alert('Use demo buttons for presentation')">
-      Analyze Text
-    </button>
+      <button class="primary analyze-text-btn">Analyze Text</button>
 
-    <div class="row">
-      <button class="secondary" onclick="demoLow()">Low</button>
-      <button class="secondary" onclick="demoMedium()">Medium</button>
-      <button class="secondary" onclick="demoHigh()">High</button>
+      <div class="levels">
+        <span>Low</span>
+        <span>Medium</span>
+        <span>High</span>
+      </div>
+
+      <!-- RESULT (already visible in your UI, we keep it) -->
+      <div class="result">
+        <h3 class="confidence-label">Low Confidence</h3>
+        <div class="bar">
+          <div class="confidence-bar"></div>
+        </div>
+        <ul>
+          <li>Highly sensational language detected</li>
+          <li>No verified source referenced</li>
+          <li>Urgency framing used</li>
+        </ul>
+      </div>
     </div>
 
-    <div id="textResult" class="result" style="display:none;"></div>
-  </div>
+    <!-- MEDIA CARD -->
+    <div class="card">
+      <h2>🖼️ Image & Video AI Detection</h2>
+      <p class="muted">Visual signal-based AI likelihood estimation</p>
 
-  <!-- MEDIA CARD -->
-  <div class="card">
-    <h2>🖼️ Image & Video AI Detection</h2>
-    <p class="sub">Visual signal-based AI likelihood estimation</p>
-
-    <input type="file">
-    <button class="primary" onclick="demoMedia()">Analyze Media</button>
-
-    <div id="mediaResult" class="result" style="display:none;"></div>
-  </div>
-
-</div>
-
-<footer>
-  Detection is probabilistic · False positives avoided · Ethics-first design
-</footer>
-
-</div>
-
-<script>
-function renderResult(el, level, confidence, signals, crisis=false) {
-  const color =
-    confidence < 35 ? "green" :
-    confidence < 65 ? "yellow" : "red";
-
-  el.style.display = "block";
-  el.innerHTML = `
-    <span class="badge ${level.toLowerCase()}">${level} Confidence</span>
-    <div class="progress">
-      <div class="progress-fill ${color}" style="width:${confidence}%"></div>
+      <input type="file" />
+      <button class="primary">Analyze Media</button>
     </div>
-    <ul>${signals.map(s=>`<li>${s}</li>`).join("")}</ul>
-    ${crisis ? "<p style='color:#facc15'>⚠ Crisis-related context detected</p>" : ""}
-  `;
-}
 
-function demoLow() {
-  renderResult(
-    textResult,
-    "Low",
-    18,
-    [
-      "Highly sensational language detected",
-      "No verified source referenced",
-      "Urgency framing used"
-    ],
-    true
-  );
-}
+  </div>
 
-function demoMedium() {
-  renderResult(
-    textResult,
-    "Medium",
-    46,
-    [
-      "Partial source present",
-      "No official confirmation available"
-    ]
-  );
-}
+  <footer>
+    Detection is probabilistic · Ethics-first design · False positives avoided
+  </footer>
 
-function demoHigh() {
-  renderResult(
-    textResult,
-    "High",
-    82,
-    [
-      "Official authority cited",
-      "Matches verified public records"
-    ]
-  );
-}
+  <!-- ✅ INLINE SCRIPT (NO MORE CONFUSION) -->
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      const textarea = document.querySelector("textarea");
+      const analyzeBtn = document.querySelector(".analyze-text-btn");
 
-function demoMedia() {
-  const confidence = Math.floor(20 + Math.random()*60);
-  const level = confidence < 35 ? "Low" : confidence < 65 ? "Medium" : "High";
+      if (!textarea || !analyzeBtn) return;
 
-  renderResult(
-    mediaResult,
-    level,
-    confidence,
-    [
-      "Noise and texture distribution analyzed",
-      "Edge consistency evaluated",
-      "Color entropy compared to natural images"
-    ]
-  );
-}
-</script>
+      // 🔥 FORCE DEMO TEXT ON LOAD
+      textarea.value = `BREAKING NEWS:
+
+Government of India has clarified that there is NO nationwide internet shutdown.
+
+Officials stated that viral social media claims are false and misleading.
+No official directive has been issued.
+
+Source: Press Information Bureau (PIB), Government of India`;
+
+      analyzeBtn.addEventListener("click", () => {
+        textarea.focus();
+      });
+    });
+  </script>
 
 </body>
 </html>
